--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 streamlit
 langchain
-langchain_community
-langchain_openai
+langchain-community
+langchain-openai
 langchain-core
 langchain-chroma
 pysqlite3-binary
 pypdf
 langchain-text-splitters
 protobuf==3.20.3
+
